# ferris_dancing

./: .clippy.toml  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  rustc-ice-2023-11-01T18_19_41-1322732.txt  rustc-ice-2023-11-01T18_26_46-1323621.txt  scratchpad.md  song_list
bluestar_toolkit/: Cargo.toml  README.md
bluestar_toolkit/src/: lib.rs
codegen/: CHANGELOG.md  Cargo.toml  README.md
codegen/src/: block.rs  docs.rs  enum.rs  field.rs  fields.rs  function.rs  impl.rs  import.rs  item.rs  lib.rs  module.rs  scope.rs  struct.rs  trait.rs  type.rs  type_alias.rs  type_def.rs  variant.rs
codegen/tests/: codegen.rs
dotstar_toolkit_utils/: Cargo.toml  README.md
dotstar_toolkit_utils/src/: bytes.rs  bytes_new.rs  lib.rs  testing.rs  testing_macros.rs
dotstar_toolkit_utils/src/bytes/: endian.rs  mod.rs  primitives.rs  primitives2.rs  read.rs  write.rs
dotstar_toolkit_utils/src/bytes/len/: impls.rs  mod.rs
dotstar_toolkit_utils/src/bytes/read/: error.rs  impls.rs  mod.rs
dotstar_toolkit_utils/src/bytes/write/: error.rs  impls.rs  mod.rs
dotstar_toolkit_utils/src/bytes_new/: mod.rs  read.rs  write.rs
dotstar_toolkit_utils/src/bytes_newer/: mod.rs  read.rs
dotstar_toolkit_utils/src/bytes_newer2/: mod.rs  primitives.rs  read.rs
dotstar_toolkit_utils/src/bytes_newer3/: mod.rs  primitives.rs  read.rs
dotstar_toolkit_utils/src/bytes_newer4/: endian.rs  mod.rs  primitives.rs  primitives2.rs  read.rs  write.rs
dotstar_toolkit_utils/src/vfs/: case_insensitive.rs  layeredfs.rs  mod.rs  native.rs  path.rs  path2.rs  symlinkfs.rs  vecfs.rs  zipfs.rs
dotstar_toolkit_utils/src/vfs2/: layeredfs.rs  mod.rs  native.rs  symlinkfs.rs  vecfs.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: act_write_and_parse.rs  rgbcx_unpack_bc1.rs  rgbcx_unpack_bc3.rs  xtx_write_and_parse.rs
gc_adpcm/: Cargo.toml  README.md
gc_adpcm/src/: lib.rs
gtx/: Cargo.toml
gtx/src/: decoder.rs  lib.rs  types.rs
jdmod/: Cargo.toml  README.md
jdmod/src/: bundle.rs  extract.rs  lib.rs  main.rs  new.rs  unlock.rs  utils.rs
jdmod/src/check/: mediawiki.rs  mod.rs
jdmod/src/export/: bundle.rs  mod.rs
jdmod/src/import/: localisation.rs  mod.rs
jdmod/src/import/gameconfig/: aliases.rs  avatars.rs  gachacontent.rs  maps_goals.rs  maps_objectives.rs  mod.rs  objectives.rs  offline_recommendation.rs  playlists.rs  portraitborders.rs  scheduled_quests.rs  search_labels.rs  songdb.rs
jdmod/src/import/jdnow/: mod.rs  types.rs
jdmod/src/import/song/: autodance.rs  dance_timeline.rs  karaoke_timeline.rs  mainsequence.rs  menuart.rs  mod.rs  montage.rs  musictrack.rs  video.rs
jdmod/src/types/: localisation.rs  mod.rs  song.rs
jdmod/src/types/gameconfig/: aliases.rs  avatars.rs  gachacontent.rs  mod.rs  objectives.rs  playlists.rs  portraitborders.rs  scheduled_quests.rs  search_labels.rs
jdmod/tests/: roundtrip_texture.rs
kaitai-gen/: Cargo.toml
kaitai-gen/src/: ast.rs  codegen.rs  ksy.rs  lib.rs
nx_opus/: Cargo.toml  README.md
nx_opus/src/: lib.rs
rgbcx/: Cargo.toml  README.md
rgbcx-rs/: Cargo.toml  README.md
rgbcx-rs/src/: lib.rs
rgbcx-sys/: Cargo.toml  README.md  build.rs
rgbcx-sys/rgbcx/: rgbcx.cpp  rgbcx.hpp
rgbcx/src/: lib.rs
ubiart_toolkit/: Cargo.toml  README.md
ubiart_toolkit/src/: json_types.rs  lib.rs
ubiart_toolkit/src/alias8/: mod.rs  parser.rs  types.rs  writer.rs
ubiart_toolkit/src/cooked/: mod.rs
ubiart_toolkit/src/cooked/act/: mod.rs  parser.rs  types.rs  writer.rs
ubiart_toolkit/src/cooked/dlcdescriptor/: mod.rs
ubiart_toolkit/src/cooked/frt/: mod.rs
ubiart_toolkit/src/cooked/gtx/: addr_lib.rs  mod.rs  parser.rs  types.rs
ubiart_toolkit/src/cooked/isc/: mod.rs  parser.rs  types.rs  writer.rs
ubiart_toolkit/src/cooked/isg/: mod.rs
ubiart_toolkit/src/cooked/json/: mod.rs  parser.rs  writer.rs
ubiart_toolkit/src/cooked/msh/: mod.rs
ubiart_toolkit/src/cooked/png/: mod.rs  parser.rs  types.rs  writer.rs
ubiart_toolkit/src/cooked/sgs/: mod.rs  (+3 more)
ubiart_toolkit/src/ipk/: mod.rs  parser.rs  types.rs  vfs.rs  writer.rs
ubiart_toolkit/src/json_types/: frt.rs  isg.rs  just_dance.rs  mod.rs  msh.rs  tape.rs  tfn.rs  tpl.rs  v16.rs  v17.rs  v1719.rs  v18.rs  v1819.rs  v19.rs  v20.rs  v20c.rs  v21.rs  v22.rs
ubiart_toolkit/src/loc8/: mod.rs  parser.rs  types.rs  writer.rs
ubiart_toolkit/src/msm/: mod.rs  parser.rs  types.rs
ubiart_toolkit/src/secure_fat/: mod.rs  parser.rs  types.rs  vfs.rs  writer.rs
ubiart_toolkit/src/shared_json_types/: mod.rs
ubiart_toolkit/src/utils/: bytes.rs  errors.rs  json.rs  mod.rs  path.rs  plumbing.rs  testing.rs
ubiart_toolkit/tests/: act.rs  alias8.rs  dlcdescriptor.rs  dtape.rs  frt.rs  gf.rs  isc.rs  isg.rs  json.rs  ktape.rs  loc8.rs  msh.rs  msm.rs  png.rs  sgs.rs  sgscontainer.rs  stape.rs  tape.rs  tfn.rs  tga.rs  tpl.rs  wav.rs
ubiart_toolkit/tests/act/: main.rs
ubiart_toolkit/tests/alias8/: main.rs
ubiart_toolkit/tests/dtape/: main.rs
ubiart_toolkit/tests/frt/: main.rs
ubiart_toolkit/tests/isc/: main.rs
ubiart_toolkit/tests/isg/: main.rs
ubiart_toolkit/tests/json/: main.rs
ubiart_toolkit/tests/ktape/: main.rs
ubiart_toolkit/tests/loc8/: main.rs
ubiart_toolkit/tests/msh/: main.rs
ubiart_toolkit/tests/msm/: main.rs
ubiart_toolkit/tests/sgs/: main.rs
ubiart_toolkit/tests/stape/: main.rs
ubiart_toolkit/tests/tape/: main.rs
ubiart_toolkit/tests/tpl/: main.rs
ubiart_toolkit_isc_types/: Cargo.toml
ubiart_toolkit_isc_types/src/: lib.rs
ubiart_toolkit_isc_types/src/property_patcher/: action.rs  value.rs
ubiart_toolkit_json_types/: Cargo.toml
ubiart_toolkit_json_types/src/: frt.rs  isg.rs  just_dance.rs  lib.rs  msh.rs  tape.rs  tpl.rs  v16.rs  v17.rs  v18.rs  v1819.rs  v19.rs  v20.rs  v20c.rs  v21.rs  v22.rs
ubiart_toolkit_shared_types/: Cargo.toml
ubiart_toolkit_shared_types/src/: errors.rs  lib.rs
wii_toolkit/: Cargo.toml  README.md
wii_toolkit/src/: lib.rs
wii_toolkit/src/u8a/: mod.rs  parser.rs  types.rs
wii_toolkit/src/wad/: parser.rs  types.rs
xtx/: Cargo.toml
xtx/src/: decoder.rs  encoder.rs  lib.rs  types.rs
(+36 files in other folders)
