#cargo-features = ["codegen-backend"]
[workspace]

members = [
    "dotstar_toolkit_utils",
    "gc_adpcm", 
    "gtx",
    "hipstr",
    "jdmod",
    "nx_opus",
    "rgbcx-rs", 
    "rgbcx-sys",
    "rgbcx", 
    "ubiart_toolkit_isc_types", 
    "ubiart_toolkit_json_types", 
    "ubiart_toolkit_shared_types", 
    "ubiart_toolkit",
    "wii_toolkit",
    "xtx",
]

resolver = "2"

[profile.release]
debug = "line-tables-only"
panic = "abort"

[profile.dev]
panic = "abort"

[profile.bench]
debug = "line-tables-only"

#[profile.dev]
#codegen-backend = "cranelift"
#[profile.dev.package.ubiart_toolkit]
#opt-level = 3
#[profile.dev.package.dotstar_toolkit_utils]
#opt-level = 3

# [profile.dev.package."*"]
# opt-level = 3

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
as_conversions = "deny"
empty_structs_with_brackets = "deny"
get_unwrap = "deny"
lossy_float_literal = "deny"
missing_assert_message = "deny"
missing_panics_doc = "deny"
allow_attributes_without_reason = "deny"

multiple_crate_versions = "allow" # Not much we can do about this
similar_names = "allow" # triggers too often
doc_markdown = "allow" # unreliable
missing_errors_doc = "allow" # the error types are descriptive enough
option_if_let_else = "allow" # much less readable than the original
too_many_lines = "allow" # parsers and writers are large and not easy to split
module_name_repetitions = "allow" # they're named like that for a reason
struct_field_names = "allow"

# TODO: Too many undocumented stuff in ubiart_toolkit
#missing_docs = "deny"
#missing_docs_in_private_items = "deny"

[workspace.dependencies]
aes = { version = "0.8.4", default-features = false }
anyhow = { version = "1.0.90", default-features = false, features = ["std", "backtrace"] }
arbitrary = { version = "1.3.2", default-features = false, features = ["derive"] }
bindgen = { version = "0.70.1", default-features = false}
bitflags = { version = "2.6.0", default-features = false, features = ["std"] }
bit-vec = { version = "0.8.0", default-features = false }
cbc = { version = "0.1.2", default-features = false, features = ["std", "block-padding"] }
cipher = { version = "0.4.4", default-features = false, features = ["std"] }
clap = { version = "4.5.20", default-features = false, features = ["std", "help", "usage", "suggestions", "derive"] }
crossbeam = { version = "0.8.4", default-features = false, features = ["std", "crossbeam-channel"] }
datatest-stable = { version = "0.2.9", default-features = false }
dotstar_toolkit_utils = { path = "dotstar_toolkit_utils" }
flate2 = { version = "1.0.34", default-features = false, features = ["rust_backend"] }
gc_adpcm = { path = "gc_adpcm" }
gtx = { path = "gtx" }
hash32 = { version = "0.3.1", default-features = false }
hipstr= { path = "hipstr", default-features = false, features = ["std", "serde"]}
hound = { version = "3.5.1", default-features = false }
image = { version = "0.25.4", default-features = false, features = ["png"] }
itertools = { version = "0.13.0", default-features = false }
memmap2 = { version = "0.9.5", default-features = false, features = ["stable_deref_trait"] }
nx_opus = { path = "nx_opus" }
nohash-hasher = { version = "0.2.0", default-features = false, features = ["std"] }
ogg = { version = "0.9.1", default-features = false }
opus = { version = "0.3.0", default-features = false }
ownable = { version = "0.6.2", default-features = false, features = ["std"]}
path-clean = { version = "1.0.1", default-features = false }
positioned-io = { version = "0.3.3", default-features = false }
quick-xml = { version = "0.36.2", default-features = false, features = ["serialize", "overlapped-lists"] }
regex = { version = "1.11.0", default-features = false, features = ["std", "perf"] }
rgbcx = { path = "rgbcx" }
rgbcx-sys = { path = "rgbcx-sys" }
rubato = { version = "0.16.0", default-features = false, features = []}
serde = { version = "1.0.210", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.132", default-features = false, features = ["std"] }
serde_with = { version = "3.11.0", default-features = false, features = ["std", "macros"] }
simd-json = { version = "0.14.1", default-features = false, features = ["runtime-detection", "swar-number-parsing"]}
simdutf8 = { version = "0.1.5", default-features = false, features = ["std", "aarch64_neon"]}
stable_deref_trait = { version = "1.2.0", default-features = false, features = ["std"] }
tegra_swizzle = { version = "0.4.0", default-features = false, features = ["std"]}
texpresso = { version = "2.0.1", default-features = false }
thiserror = { version = "1.0.64", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "ansi", "local-time", "time", "env-filter"] }
ubiart_toolkit = { path = "ubiart_toolkit" }
ubiart_toolkit_shared_types = { path = "ubiart_toolkit_shared_types" }
ubiart_toolkit_json_types = { path = "ubiart_toolkit_json_types" }
ubiart_toolkit_isc_types = { path = "ubiart_toolkit_isc_types" }
wiiu_swizzle = { version = "0.3.0", default-features = false, features = ["std"] }
yoke = { version = "0.7.4", default-features = false, features = ["alloc", "derive"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate-flate2"] }
zopfli = { version = "0.8.1", default-features = false, features = ["zlib", "std"] }
