#cargo-features = ["codegen-backend"]
[workspace]

members = [
    "dotstar_toolkit_utils",
    "gtx",
    "jdmod",
#    "msadpcm",
    "nx_opus",
    "rgbcx-rs", 
    "rgbcx-sys",
    "rgbcx",
    "ubiart_toolkit_shared_types", 
    "ubiart_toolkit",
    "wii_toolkit",
    "xtx",
    "bluestar_toolkit",
]

resolver = "2"

[profile.release]
debug = "line-tables-only"
panic = "abort"

[profile.dev]
panic = "abort"

[profile.bench]
debug = "line-tables-only"

#[profile.dev]
#codegen-backend = "cranelift"
#[profile.dev.package.ubiart_toolkit]
#opt-level = 3
#[profile.dev.package.dotstar_toolkit_utils]
#opt-level = 3

[profile.dev.package."aes"]
opt-level = 3
[profile.dev.package."anyhow"]
opt-level = 3
[profile.dev.package."arbitrary"]
opt-level = 3
[profile.dev.package."bindgen"]
opt-level = 3
[profile.dev.package."bitflags"]
opt-level = 3
[profile.dev.package."bit-vec"]
opt-level = 3
[profile.dev.package."cbc"]
opt-level = 3
[profile.dev.package."cipher"]
opt-level = 3
[profile.dev.package."clap"]
opt-level = 3
[profile.dev.package."crossbeam"]
opt-level = 3
[profile.dev.package."datatest-stable"]
opt-level = 3
[profile.dev.package."dotstar_toolkit_utils"]
opt-level = 3
[profile.dev.package."flate2"]
opt-level = 3
[profile.dev.package."gc_adpcm"]
opt-level = 3
[profile.dev.package."gtx"]
opt-level = 3
[profile.dev.package."hash32"]
opt-level = 3
[profile.dev.package."hipstr"]
opt-level = 3
[profile.dev.package."hound"]
opt-level = 3
[profile.dev.package."image"]
opt-level = 3
[profile.dev.package."image_dds"]
opt-level = 3
[profile.dev.package."itertools"]
opt-level = 3
[profile.dev.package."memmap2"]
opt-level = 3
[profile.dev.package."nx_opus"]
opt-level = 3
[profile.dev.package."ogg"]
opt-level = 3
[profile.dev.package."opus"]
opt-level = 3
[profile.dev.package."ownable"]
opt-level = 3
[profile.dev.package."path-clean"]
opt-level = 3
[profile.dev.package."positioned-io"]
opt-level = 3
[profile.dev.package."quick-xml"]
opt-level = 3
[profile.dev.package."regex"]
opt-level = 3
[profile.dev.package."rgbcx"]
opt-level = 3
[profile.dev.package."rgbcx-sys"]
opt-level = 3
[profile.dev.package."rubato"]
opt-level = 3
[profile.dev.package."serde"]
opt-level = 3
[profile.dev.package."serde_json"]
opt-level = 3
[profile.dev.package."serde_with"]
opt-level = 3
[profile.dev.package."simd-json"]
opt-level = 3
[profile.dev.package."simdutf8"]
opt-level = 3
[profile.dev.package."stable_deref_trait"]
opt-level = 3
[profile.dev.package."superstruct"]
opt-level = 3
[profile.dev.package."tegra_swizzle"]
opt-level = 3
[profile.dev.package."test_eq"]
opt-level = 3
[profile.dev.package."texpresso"]
opt-level = 3
[profile.dev.package."thiserror"]
opt-level = 3
[profile.dev.package."tracing"]
opt-level = 3
[profile.dev.package."tracing-subscriber"]
opt-level = 3
[profile.dev.package."ubiart_toolkit_shared_types"]
opt-level = 3
[profile.dev.package."wiiu_swizzle"]
opt-level = 3
[profile.dev.package."yoke"]
opt-level = 3
[profile.dev.package."zip"]
opt-level = 3
[profile.dev.package."zopfli"]
opt-level = 3

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
as_conversions = "deny"
empty_structs_with_brackets = "deny"
get_unwrap = "deny"
lossy_float_literal = "deny"
missing_assert_message = "deny"
missing_panics_doc = "deny"
allow_attributes_without_reason = "deny"

float_cmp = "allow" # Used a lot in deserialize functions for checking
cognitive_complexity = "allow" # most deserialize functions are "too" complex
multiple_crate_versions = "allow" # Not much we can do about this
similar_names = "allow" # triggers too often
doc_markdown = "allow" # unreliable
missing_errors_doc = "allow" # the error types are descriptive enough
option_if_let_else = "allow" # much less readable than the original
too_many_lines = "allow" # parsers and writers are large and not easy to split
module_name_repetitions = "allow" # they're named like that for a reason
if_not_else = "allow" # code is easier to follow without the lint
struct_field_names = "allow" # most naming is set by the file formats
case_sensitive_file_extension_comparisons = "allow" # not relevant for this application

# TODO: Too much undocumented stuff in ubiart_toolkit
#missing_docs = "deny"
#missing_docs_in_private_items = "deny"

[workspace.dependencies]
aes = { version = "0.8.4", default-features = false }
anyhow = { version = "1.0.94", default-features = false, features = ["std", "backtrace"] }
arbitrary = { version = "1.4.1", default-features = false, features = ["derive"] }
bindgen = { version = "0.71.1", default-features = false}
bitflags = { version = "2.6.0", default-features = false, features = ["std"] }
bit-vec = { version = "0.8.0", default-features = false }
bluestar_toolkit = { path = "bluestar_toolkit" }
cbc = { version = "0.1.2", default-features = false, features = ["std", "block-padding"] }
cipher = { version = "0.4.4", default-features = false, features = ["std"] }
clap = { version = "4.5.23", default-features = false, features = ["std", "help", "usage", "suggestions", "derive"] }
crossbeam = { version = "0.8.4", default-features = false, features = ["std", "crossbeam-channel"] }
datatest-stable = { version = "0.2.9", default-features = false }
dotstar_toolkit_utils = { path = "dotstar_toolkit_utils" }
ffmpeg-sidecar = { version = "2.0.4", default-features = false, features = ["download_ffmpeg"] }
flate2 = { version = "1.0.35", default-features = false, features = ["rust_backend"] }
gc_adpcm = { version = "0.2.0", default-features = false, features = ["std"] }
gtx = { path = "gtx" }
hash32 = { version = "0.3.1", default-features = false }
hipstr= { git = "https://github.com/Kriskras99/hipstr.git", default-features = false, features = ["std", "serde"]}
hound = { version = "3.5.1", default-features = false }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg", "tga"] }
image_dds = { version = "0.6.2", default-features = false, features = ["ddsfile", "image"]}
itertools = { version = "0.13.0", default-features = false }
memmap2 = { version = "0.9.5", default-features = false, features = ["stable_deref_trait"] }
nx_opus = { path = "nx_opus" }
nohash-hasher = { version = "0.2.0", default-features = false, features = ["std"] }
ogg = { version = "0.9.1", default-features = false }
opus = { version = "0.3.0", default-features = false }
ownable = { version = "0.6.2", default-features = false, features = ["std"]}
path-clean = { version = "1.0.1", default-features = false }
phf = { version = "0.11.2", default-features = false, features = ["macros"]}
positioned-io = { version = "0.3.3", default-features = false }
quick-xml = { version = "0.37.1", default-features = false, features = ["serialize", "overlapped-lists"] }
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
rgbcx = { path = "rgbcx" }
rgbcx-sys = { path = "rgbcx-sys" }
rubato = { version = "0.16.1", default-features = false, features = []}
serde = { version = "1.0.214", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.133", default-features = false, features = ["std"] }
serde_with = { version = "3.11.0", default-features = false, features = ["std", "macros"] }
simd-json = { version = "0.14.3", default-features = false, features = ["runtime-detection", "swar-number-parsing"]}
simdutf8 = { version = "0.1.5", default-features = false, features = ["std", "aarch64_neon"]}
stable_deref_trait = { version = "1.2.0", default-features = false, features = ["std"] }
superstruct = { git = "https://github.com/Kriskras99/superstruct.git", branch = "enum-variant-attributes", version = "0.8.0", default-features = false, features = [] }
tegra_swizzle = { version = "0.4.0", default-features = false, features = ["std"]}
tempfile = { version = "3.14.0", default-features = false, features = []}
test_eq = { version = "0.2.0", default-features = false, features = ["line-info"] }
texpresso = { version = "2.0.1", default-features = false }
thiserror = { version = "2.0.4", default-features = false, features = ["std"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "ansi", "local-time", "time", "env-filter"] }
ubiart_toolkit = { path = "ubiart_toolkit" }
ubiart_toolkit_shared_types = { path = "ubiart_toolkit_shared_types" }
wiiu_swizzle = { version = "0.3.0", default-features = false, features = ["std"] }
yoke = { version = "0.7.5", default-features = false, features = ["alloc", "derive"] }
zip = { version = "2.2.1", default-features = false, features = ["deflate"] }
zopfli = { version = "0.8.1", default-features = false, features = ["zlib", "std"] }
