[package]
name = "bluestar_toolkit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Library and CLI tools for working with UbiArt Engine file formats"
keywords = ["ubiart", "ipk"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
serde = { workspace = true }
hipstr = { workspace = true }

[lints]
workspace = true
