[package]
name = "dotstar_toolkit_utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Utility functions and VFS implementation useful for parsers"
keywords = ["vfs", "utilities"]
categories = ["filesystem", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { workspace = true, features = ["std"] }
memmap2 = { workspace = true, features = ["stable_deref_trait"] }
path-clean = { workspace = true, features = [] }
positioned-io = { workspace = true, features = [] }
stable_deref_trait = { workspace = true, features = ["std"] }
thiserror = { workspace = true, features = [] }
tracing.workspace = true
ux = { workspace = true, features = ["std"] }
yoke = { workspace = true, features = ["derive"] }
