[package]
name = "dotstar_toolkit_utils"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Utility functions and VFS implementation useful for parsers"
keywords = ["vfs", "utilities"]
categories = ["filesystem", "parsing"]

[dependencies]
hipstr = { workspace = true }
memmap2 = { workspace = true }
positioned-io = { workspace = true }
stable_deref_trait = { workspace = true }
test_eq = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
yoke = { workspace = true }
zip = { workspace = true }

[lints]
workspace = true
