[package]
name = "ferris-dancing-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys.workspace = true
ubiart_toolkit = { workspace = true, features = ["fuzz"] }
dotstar_toolkit_utils.workspace = true
rgbcx.workspace = true
rgbcx-rs.workspace = true
image.workspace = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "act_write_and_parse"
path = "fuzz_targets/act_write_and_parse.rs"
test = false
doc = false

[[bin]]
name = "xtx_write_and_parse"
path = "fuzz_targets/xtx_write_and_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgbcx_unpack_bc1"
path = "fuzz_targets/rgbcx_unpack_bc1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "rgbcx_unpack_bc3"
path = "fuzz_targets/rgbcx_unpack_bc3.rs"
test = false
doc = false
bench = false
