[package]
name = "gc_adpcm"
version = "0.1.0"
edition = "2021"
description = "Decoder for the ADPCM bitstream format used by Nintendo on the GameCube, Wii, and WiiU"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kriskras99/ferris_dancing"
readme = "README.md"
keywords = ["adpcm", "decoder", "gamecube", "wii", "wiiu"]
categories = ["encoding", "multimedia", "parser-implementations"]

[dependencies]

[lints]
workspace = true
