[package]
name = "gtx"
version = "0.1.0"
edition = "2021"
description = "Texture decoder for the WiiU GTX format"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kriskras99/ferris_dancing"
readme = "README.md"
keywords = ["gtx", "wiiu", "texture", "decoder"]
categories = ["encoding", "multimedia::encoding", "parser-implementations"]

[dependencies]
dotstar_toolkit_utils = { workspace = true }
image = { workspace = true }
test_eq = { workspace = true }
texpresso = { workspace = true }
thiserror = { workspace = true }
wiiu_swizzle = { workspace = true }

[lints]
workspace = true
