[package]
name = "jdmod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Tool for modding Just Dance games"
keywords = ["just-dance", "modding"]
categories = ["command-line-utilities", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["std", "backtrace"], default-features = false}
bitvec = { version = "1.0.1", default-features = false }
clap = { version = "4.4.18", features = ["std", "help", "usage", "suggestions", "derive"], default-features = false}
crossbeam = { version = "0.8.4", features = ["std", "crossbeam-channel"], default-features = false}
dotstar_toolkit_utils = { version = "0.1.0", path = "../dotstar_toolkit_utils" }
flate2 = { version = "1.0.28", features = ["rust_backend"], default-features = false}
hash32 = { version = "0.3.1", features = [], default-features = false}
image = { version = "0.24.8", features = ["png"], default-features = false }
memmap2 = { version = "0.9.4", features = ["stable_deref_trait"], default-features = false}
path-clean = { version = "1.0.1", features = [], default-features = false}
regex = { version = "1.10.3", features = ["std", "perf"], default-features = false}
serde = { version = "1.0", features = ["std", "derive"], default-features = false}
serde_json = { version = "1.0.112", features = ["std"], default-features = false}
stable_deref_trait = { version = "1.2.0", features = ["std"], default-features = false}
texpresso = { version = "2.0.1", features = [], default-features = false}
ubiart_toolkit = { path = "../ubiart_toolkit" }

[lints]
workspace = true
