[package]
name = "jdmod"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Tool for modding Just Dance games"
keywords = ["just-dance", "modding"]
categories = ["command-line-utilities", "parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true, features = ["std", "backtrace"] }
bitvec = { workspace = true }
clap = { workspace = true, features = ["std", "help", "usage", "suggestions", "derive"] }
crossbeam = { workspace = true, features = ["std", "crossbeam-channel"] }
dotstar_toolkit_utils = { version = "0.1.0", path = "../dotstar_toolkit_utils" }
flate2 = { workspace = true, features = ["rust_backend"] }
hash32 = { workspace = true, features = [] }
image = { workspace = true, features = ["png"] }
memmap2 = { workspace = true, features = ["stable_deref_trait"] }
path-clean = { workspace = true, features = [] }
regex = { workspace = true, features = ["std", "perf"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
stable_deref_trait = { workspace = true, features = ["std"] }
texpresso = { workspace = true, features = [] }
tracing.workspace = { workspace = true, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "fmt", "ansi", "local-time", "time", "env-filter"] }
ubiart_toolkit = { path = "../ubiart_toolkit" }

[lints]
workspace = true
