[package]
name = "jdmod"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Tool for modding Just Dance games"
keywords = ["just-dance", "modding"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = { workspace = true }
bit-vec = { workspace = true }
clap = { workspace = true }
crossbeam = { workspace = true }
dotstar_toolkit_utils = { workspace = true }
flate2 = { workspace = true }
gc_adpcm = { workspace = true }
hash32 = { workspace = true }
hipstr = { workspace = true }
hound = { workspace = true }
image = { workspace = true }
memmap2 = { workspace = true }
nx_opus = { workspace = true }
ownable = { workspace = true }
path-clean = { workspace = true }
regex = { workspace = true }
rubato = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
stable_deref_trait = { workspace = true }
test_eq = { workspace = true }
texpresso = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ubiart_toolkit = { workspace = true }
[dev-dependencies]
datatest-stable = { workspace = true }


[features]
default = []
experimental = []

[lints]
workspace = true

[[test]]
name = "roundtrip_texture"
harness = false
