[package]
name = "rgbcx-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "RIIR of rgbcx"
keywords = ["graphics"]
categories = ["encoding"]

[dependencies]
image = { workspace = true }
rgbcx = { path = "../rgbcx" }

[lints]
workspace = true
