[package]
name = "rgbcx-sys"
version = "1.12.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Rust wrapper for rgbcx.h"
keywords = ["ffi", "graphics"]
categories = ["external-ffi-bindings", "encoding"]

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
