[package]
name = "rgbcx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Idiomatic Rust bindings for rgbcx.h"
keywords = ["graphics"]
categories = ["api-bindings", "encoding"]

[dependencies]
bitflags = "2.4.1"
rgbcx-sys = { version = "1.12.0", path = "../rgbcx-sys" }

[lints]
workspace = true
