[package]
name = "rgbcx"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kriskras99/ferris_dancing"
description = "Idiomatic Rust bindings for rgbcx.h"
keywords = ["graphics"]
categories = ["api-bindings", "encoding"]

[dependencies]
bitflags = { workspace = true }
rgbcx-sys = { workspace = true }

[lints]
workspace = true
